tests/baselines/reference/assignmentCompatability22.errors.txt
tests/cases/compiler/assignmentCompatability22.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type '{ one: boolean[]; }'.
  Types of property 'one' are incompatible.
    Type 'number' is not assignable to type 'boolean[]'.


==== tests/cases/compiler/assignmentCompatability22.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export var obj = {one: [true]};
        export var __val__obj = obj;
    }
    __test2__.__val__obj = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '{|interfaceWithPublicAndOptional|0|}<number, string>' is not assignable to type '{ {|one|1|}: boolean[]; }'.
!!! error TS2322:   Types of property 'one' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'boolean[]'.
!!! annotated symbol 0 tests/cases/compiler/assignmentCompatability22.ts:2:22
!!! annotated symbol 1 tests/cases/compiler/assignmentCompatability22.ts:6:23